--- a/.github/workflows/lin-auto-d.yml
+++ b/.github/workflows/lin-auto-d.yml
@@ -1,4 +1,4 @@
-name: lin auto icx
+name: lin auto d
 
 on:
   push:
@@ -12,21 +12,13 @@ jobs:
         run:  |
           sudo apt-get update
           sudo apt-get install autoconf automake libtool libtool-bin libaec-dev
-          cd /tmp
-          wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
-          sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
-          rm GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB
-          sudo add-apt-repository -y "deb https://apt.repos.intel.com/oneapi all main"
-          sudo apt update
-          sudo apt install -y intel-oneapi-compiler-dpcpp-cpp
       - name: test
         shell: bash
         run: |
-          source /opt/intel/oneapi/setvars.sh
           curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
           tar zxf snapshot-1.14.tar.gz
           cd hdf5-snapshot-1.14
-          ./configure --prefix=/tmp CC="$(which icx) --enable-production"
+          ./configure --prefix=/tmp --enable-internal-debug=all"
           make -j
           make check -j
           make install
