--- a/.github/workflows/lin-d.yml
+++ b/.github/workflows/lin-d.yml
@@ -1,9 +1,9 @@
-name: lin
+name: lin d
 
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,5 +16,5 @@ jobs:
           cd hdf5-snapshot-1.14
           mkdir build
           cd build
-          cmake -DSITE:STRING="ubu-22.04" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
-          ctest -D Experimental -C Release
+          cmake -DSITE:STRING="ubu-22.04" -DBUILDNAME:STRING="4/d" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
+          ctest -D Experimental -C Debug
