--- a/.github/workflows/lin-auto-d.yml
+++ b/.github/workflows/lin-auto-d.yml
@@ -18,7 +18,7 @@ jobs:
           curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
           tar zxf snapshot-1.14.tar.gz
           cd hdf5-snapshot-1.14
-          ./configure --prefix=/tmp --enable-internal-debug=all"
+          ./configure --prefix=/tmp --enable-internal-debug=all
           make -j
           make check -j
           make install
