--- a/.github/workflows/lin20-d.yml
+++ b/.github/workflows/lin20-d.yml
@@ -1,20 +1,20 @@
-name: mac-14
+name: lin20 d
 
 on:
   push:
-    branches: main-
-
+    branches:
+      - main
 jobs:
   build:
-    name: Test snapshot
-    runs-on: macos-14
+    runs-on: ubuntu-20.04
     steps:
       - name: test
+        shell: bash
         run: |
           curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
           tar zxf snapshot-1.14.tar.gz
           cd hdf5-snapshot-1.14
           mkdir build
           cd build
-          cmake -DSITE:STRING="mac-14" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
+          cmake -DSITE:STRING="ubu-20.04" -DBUILDNAME:STRING="4/d" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
           ctest -D Experimental -C Release
