--- a/.github/workflows/win-icx-ifx.yml
+++ b/.github/workflows/win-icx-ifx.yml
@@ -3,38 +3,24 @@ name: win icx ifx
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   build:
     runs-on: windows-latest
     steps:
-      - name: Install CMake and Ninja
+      - name: cmake
         uses: lukka/get-cmake@latest
-        with:
-          cmakeVersion: "3.27.6"
-      - name: Install LLVM and Clang
-        uses: KyleMayes/install-llvm-action@v1
-        with:
-          version: "17"
-      - name: Install Intel OneAPI
+      - name: oneapi
         uses: awvwgk/setup-fortran@main
         with:
           compiler: intel
-          version: '2024.0'
-      - name: Install Intel MPI
-        uses: mpi4py/setup-mpi@v1
-        with:
-          mpi: intelmpi
-      - name: Set oneAPI
-        shell: cmd
+          version: '2024.1'
+      - name: test
         run: |
-          "C:\Program Files (x86)\Intel\oneAPI\setvars.bat"
-      - name: Configure & Build & Test
-        shell: cmd
-        run: |
-          git clone https://github.com/HDFgroup/hdf5.git
-          cd hdf5
+          curl -s -O -L  https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.zip
+          unzip -q snapshot-1.14.zip
+          cd  hdf5-snapshot-1.14          
           mkdir build
           cd build
-          "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin\cmake.exe" -G Ninja -DBUILDNAME=icx.qx.p -DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/latest/bin/mpicc.bat" -DCMAKE_C_FLAGS="/QxHOST" -DCMAKE_CXX_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/latest/bin/mpicc.bat" -DHDF5_ENABLE_PARALLEL:BOOL=ON  -DHDF5_ENABLE_Z_LIB_SUPPORT:BOOL=OFF -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -DMPIEXEC_EXECUTABLE:FILEPATH="C:/Program Files (x86)/Intel/oneAPI/mpi/latest/bin/mpiexec.exe" -DMPI_C_HEADER_DIR:PATH="C:/Program Files (x86)/Intel/oneAPI/mpi/latest/include" -DCTEST_DROP_SITE_INIT=my.cdash.org -DSITE=win ..	  
-          "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin\ctest" -D Experimental
+          cmake -DSITE:STRING=win -DBUILDNAME:STRING="4/icx.r.ifx" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" -DHDF5_BUILD_FORTRAN:BOOL=ON  ..	  
+          ctest -D Experimental -C Release
