--- a/.github/workflows/win-icx-ifx.yml
+++ b/.github/workflows/win-icx-ifx.yml
@@ -26,5 +26,5 @@ jobs:
           cd  hdf5-snapshot-1.14          
           mkdir build
           cd build
-          cmake -DSITE:STRING=win -DBUILDNAME:STRING="4/icx.r.ifx" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" -DHDF5_BUILD_FORTRAN:BOOL=ON  ..	  
+          cmake -G Ninja -DSITE:STRING=win -DBUILDNAME:STRING="4/icx.r.ifx" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" -DHDF5_BUILD_FORTRAN:BOOL=ON  ..
           ctest -D Experimental -C Release
