--- a/.github/workflows/fbsd.yml
+++ b/.github/workflows/fbsd.yml
@@ -35,6 +35,6 @@ jobs:
             -DSITE:STRING=fbsd-14.0 \
             -DBUILDNAME:STRING="4/r" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
-            -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5"
+            -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
             ..
             ctest -D Experimental -C Release
