--- a/.github/workflows/fbsd-auto.yml
+++ b/.github/workflows/fbsd-auto.yml
@@ -1,15 +1,14 @@
-name: fbsd
+name: fbsd auto
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
-  test:
+  test: # make sure the action works on a clean machine without building
     name: ${{ matrix.os.name }} ${{ matrix.os.architecture }} ${{ matrix.os.version }} on ${{ matrix.os.host }}
     runs-on: ${{ matrix.os.host }}
     strategy:
-      fail-fast: false
       matrix:
         os:
           - name: freebsd
@@ -25,16 +24,12 @@ jobs:
           version: '${{ matrix.os.version }}'
           shell: bash
           run: |
-            sudo pkg install -y cmake
+            sudo pkg install -y autoconf automake libtool
             curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
             tar zxf snapshot-1.14.tar.gz
-            cd hdf5-snapshot-1.14
-            mkdir build
-            cd build
-            cmake \
-            -DSITE:STRING=fbsd-14.0 \
-            -DBUILDNAME:STRING="4/r" \
-            -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
-            -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" \
-            ..
-            ctest -D Experimental -C Release
+            cd hdf5-snapshot-1.14	    
+            ./configure --prefix=/tmp --enable-build-mode=production
+            make -j
+            make check -j
+            make install
+            make uninstall	    
