--- a/.github/workflows/obsd-7.4-auto.yml
+++ b/.github/workflows/obsd-7.4-auto.yml
@@ -1,11 +1,11 @@
-name: OpenBSD autotools
+name: obsd-7.4 auto
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
-  test: # make sure the action works on a clean machine without building
+  test:
     name: ${{ matrix.os.name }} ${{ matrix.os.architecture }} ${{ matrix.os.version }} on ${{ matrix.os.host }}
     runs-on: ${{ matrix.os.host }}
     strategy:
@@ -14,35 +14,31 @@ jobs:
         os:
           - name: openbsd
             architecture: x86_64
-            version: '7.3'
+            version: '7.4'
             host: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
       - name: ${{ matrix.os.name }}
-        uses: cross-platform-actions/action@v0.19.0
-        env:
-          FOO: A
-          BAR: B
+        uses: cross-platform-actions/action@v0.23.0
         with:
-          environment_variables: FOO BAR
           operating_system: ${{ matrix.os.name }}
           architecture: ${{ matrix.os.architecture }}
           version: '${{ matrix.os.version }}'
           shell: bash
           run: |
-            sudo pkg_add git
+            sudo pkg_add curl
             sudo pkg_add autoconf-2.71
             sudo pkg_add automake-1.16.5
             sudo pkg_add libtool-2.4.2p2
-            git clone https://github.com/HDFGroup/hdf5
-            cd hdf5
+            sudo pkg install -y autoconf automake libtool
             export AUTOCONF_VERSION=2.71
             export AUTOMAKE_VERSION=1.16
-            ls /usr/local/bin/
             export HDF5_LIBTOOL=/usr/local/bin/libtoolize
-            ./autogen.sh
-            ./configure
+            curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
+            tar zxf snapshot-1.14.tar.gz
+            cd hdf5-snapshot-1.14	    
+            ./configure --prefix=/tmp --enable-build-mode=production
             make
             make check
+            make install
+            make uninstall
+
