--- a/.github/workflows/fbsd-auto.yml
+++ b/.github/workflows/fbsd-auto.yml
@@ -29,7 +29,7 @@ jobs:
             tar zxf snapshot-1.14.tar.gz
             cd hdf5-snapshot-1.14	    
             ./configure --prefix=/tmp --enable-build-mode=production
-            make -j
-            make check -j
+            make
+            make check
             make install
             make uninstall	    
