--- a/.github/workflows/hdfs.yml
+++ b/.github/workflows/hdfs.yml
@@ -14,5 +14,8 @@ jobs:
           sudo apt-get -q update
           curl -s -L -O  https://dlcdn.apache.org/hadoop/common/hadoop-3.4.0/hadoop-3.4.0.tar.gz
           tar zxvf hadoop-3.4.0.tar.gz
+          ssh-keygen -t rsa -P '' -f ~/.ssh/id_rsa
+          cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
+          chmod 0600 ~/.ssh/authorized_keys
           ssh localhost
           hadoop-3.4.0/bin/hadoop
