--- a/.github/workflows/hdfs.yml
+++ b/.github/workflows/hdfs.yml
@@ -18,4 +18,7 @@ jobs:
           cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
           chmod 0600 ~/.ssh/authorized_keys
           ./hadoop-3.4.0/bin/hdfs namenode -format
-          sudo ./hadoop-3.4.0/sbin/start-dfs.sh
+          export HDFS_DATANODE_USER=runner
+          export HDFS_NAMENODE_USER=runner
+          export HDFS_SECONDARYNAMENODE_USER=runner
+          ./hadoop-3.4.0/sbin/start-dfs.sh
