--- a/.github/workflows/dpkg.yml
+++ b/.github/workflows/dpkg.yml
@@ -1,4 +1,4 @@
-name: alien
+name: dpkg
 
 on:
   push:
@@ -15,9 +15,8 @@ jobs:
           sudo apt install alien
       - name: rpm
         run:  |
-          curl -s -L -O https://github.com/HDFGroup/hdf5/releases/download/snapshot-1.14/snapshot-1.14-ubuntu-2204_gcc.rpm.tar.gz
-          tar zxvf snapshot-1.14-ubuntu-2204_gcc.rpm.tar.gz
+          curl -s -L -O https://github.com/HDFGroup/hdf5/releases/download/snapshot-1.14/snapshot-1.14-ubuntu-2204_gcc.deb.tar.gz
+          tar zxvf snapshot-1.14-ubuntu-2204_gcc.deb.tar.gz
           cd hdf5
-          sudo alien HDF5-1.14.4.2-1.x86_64.rpm
           sudo dpkg -i HDF5-1.14.4.2-1.x86_64.deb
           /HDF_Group/HDF5/1.14.4.2/bin/h5ls
