ci(pkg): rename package

--- a/.github/workflows/dpkg.yml
+++ b/.github/workflows/dpkg.yml
@@ -18,5 +18,5 @@ jobs:
           curl -s -L -O https://github.com/HDFGroup/hdf5/releases/download/snapshot-1.14/snapshot-1.14-ubuntu-2204_gcc.deb.tar.gz
           tar zxvf snapshot-1.14-ubuntu-2204_gcc.deb.tar.gz
           cd hdf5
-          sudo dpkg -i HDF5-1.14.4.2-1.x86_64.deb
+          sudo dpkg -i HDF5-1.14.4.2-Linux.deb
           /HDF_Group/HDF5/1.14.4.2/bin/h5ls
