ci: h5ls --help

--- a/.github/workflows/dpkg.yml
+++ b/.github/workflows/dpkg.yml
@@ -13,10 +13,10 @@ jobs:
         run:  |
           sudo apt-get -q update
           sudo apt install alien
-      - name: rpm
+      - name: dpkg
         run:  |
           curl -s -L -O https://github.com/HDFGroup/hdf5/releases/download/snapshot-1.14/snapshot-1.14-ubuntu-2204_gcc.deb.tar.gz
           tar zxvf snapshot-1.14-ubuntu-2204_gcc.deb.tar.gz
           cd hdf5
           sudo dpkg -i HDF5-1.14.4.2-Linux.deb
-          /HDF_Group/HDF5/1.14.4.2/bin/h5ls
+          /HDF_Group/HDF5/1.14.4.2/bin/h5ls --help
