--- a/.github/workflows/alien.yml
+++ b/.github/workflows/alien.yml
@@ -19,5 +19,5 @@ jobs:
           tar zxvf snapshot-1.14-ubuntu-2204_gcc.rpm.tar.gz
           cd hdf5
           sudo alien HDF5-1.14.4.2-1.x86_64.rpm
-          sudo dpkg -i HDF5-1.14.4.2-2.x86_64.deb
+          sudo dpkg -i HDF5-1.14.4.2-2_amd64.deb
           /HDF_Group/HDF5/1.14.4.2/bin/h5ls --help
