--- a/.github/workflows/alien.yml
+++ b/.github/workflows/alien.yml
@@ -19,6 +19,7 @@ jobs:
           tar zxvf snapshot-1.14-ubuntu-2204_gcc.rpm.tar.gz
           cd hdf5
           sudo alien HDF5-1.14.4.2-1.x86_64.rpm
-          ls
+          ls -l
+          pwd
           sudo dpkg -i ./hdf5-1.14.4.2-2_amd64.deb
           /HDF_Group/HDF5/1.14.4.2/bin/h5ls --help
