--- a/.github/workflows/lin.yml
+++ b/.github/workflows/lin.yml
@@ -3,7 +3,7 @@ name: lin
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,9 +11,9 @@ jobs:
       - name: test
         shell: bash
         run: |
-          curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
-          tar zxf snapshot-1.14.tar.gz
-          cd hdf5-snapshot-1.14
+          curl -O -L https://github.com/HDFGroup/hdf5/releases/download/hdf5_1.14.4/hdf5-1.14.4.tar.gz
+          tar zxf hdf5-1.14.4.tar.gz
+          cd hdf5-1.14.4
           mkdir build
           cd build
           cmake -DSITE:STRING="ubu-22.04" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
