ci(fbsd): test debug untagged

--- a/.github/workflows/fbsd.yml
+++ b/.github/workflows/fbsd.yml
@@ -26,7 +26,7 @@ jobs:
           shell: bash
           run: |
             sudo pkg install -y cmake
-            curl -O -L https://github.com/HDFGroup/hdf5/releases/download/hdf5_1.14.4/hdf5-1.14.4.tar.gz
+            curl -O -L https://github.com/HDFGroup/hdf5/releases/download/untagged-d585326d5795f9225910/hdf5-1.14.4.tar.gz
             tar zxf hdf5-1.14.4.tar.gz
             cd hdf5-1.14.4
             mkdir build
