ci(win): test 2024.1 parallel

--- a/.github/workflows/win-icx-f-p.yml
+++ b/.github/workflows/win-icx-f-p.yml
@@ -1,9 +1,9 @@
-name: windows CMake icx ifx parallel
+name: win icx ifx p
 
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -11,13 +11,11 @@ jobs:
     steps:
       - name: Install CMake
         uses: lukka/get-cmake@latest
-        with:
-          cmakeVersion: "3.27.7"
       - name: Install Intel OneAPI
         uses: awvwgk/setup-fortran@main
         with:
           compiler: intel
-          version: '2023.2'
+          version: '2024.1'
       - name: Install Intel MPI
         uses: mpi4py/setup-mpi@v1
         with:
@@ -33,17 +31,13 @@ jobs:
       - name: Set MPI
         shell: cmd
         run: |
-          "C:\Program Files (x86)\Intel\oneAPI\mpi\2021.10.0\env\vars.bat"
+          "C:\Program Files (x86)\Intel\oneAPI\mpi\latest\env\vars.bat"
       - name: Configure & Build
         shell: cmd
         run: |
           cd hdf5
           mkdir build
           cd build
-          cmake -DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpicc.bat" -DCMAKE_Fortran_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/2021.10.0/bin/mpiifort.bat" -DHDF5_BUILD_FORTRAN:BOOL=ON -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF ..
-          cmake --build . --config Release
-      - name: Test
-        shell: cmd
-        run: |
-          cd hdf5/build
-          ctest -C Release -E MPI_TEST_H5DIFF-h5diff -VV --output-on-error
+          cmake -DCMAKE_C_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/latest/bin/mpicc.bat" -DCMAKE_Fortran_COMPILER="C:/Program Files (x86)/Intel/oneAPI/mpi/latest/bin/mpiifort.bat" -DHDF5_BUILD_FORTRAN:BOOL=ON -DHDF5_ENABLE_PARALLEL:BOOL=ON -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF -DCTEST_DROP_SITE_INIT=my.cdash.org -DSITE=win -DBUILDNAME="ninja/icx/+p" ..
+          ctest -D Experimental -C Release          
+ 
