--- a/.github/workflows/win-icx-f-p.yml
+++ b/.github/workflows/win-icx-f-p.yml
@@ -17,7 +17,7 @@ jobs:
           compiler: intel
           version: '2024.1'
       - name: Install Intel MPI
-        uses: hyoklee/setup-mpi@v1
+        uses: hyoklee/setup-mpi
         with:
           mpi: intelmpi
       - name: Checkout HDF5
