ci(ifx): test latest mpi4py

--- a/.github/workflows/win-icx-f-p.yml
+++ b/.github/workflows/win-icx-f-p.yml
@@ -16,6 +16,10 @@ jobs:
         with:
           compiler: intel
           version: '2024.1'
+      - name: Install Intel MPI
+        uses: mpi4py/setup-mpi@master
+        with:
+          mpi: intelmpi
       - name: Checkout HDF5
         shell: cmd
         run: |
