--- a/.github/workflows/obsd-ompi.yml
+++ b/.github/workflows/obsd-ompi.yml
@@ -2,7 +2,7 @@ name: obsd ompi
 
 on:
   push:
-    branches: [main-]
+    branches: [main]
 
 jobs:
   test:
@@ -34,9 +34,10 @@ jobs:
             sudo pkg_add cmake
             sudo pkg_add openmpi
             export NPROCS=2
+            export PMIX_MCA_gds=hash 	    
             mkdir build
             cd build
-            cmake -DBUILDNAME:STRING=ompi \
+            cmake -DBUILDNAME:STRING="ompi+pmix=hash" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DHDF5_ENABLE_PARALLEL:BOOL=ON \
             -DMPIEXEC_PREFLAGS="-oversubscribe" \
