--- a/.github/workflows/lin-auto-icx-f-p.yml
+++ b/.github/workflows/lin-auto-icx-f-p.yml
@@ -17,7 +17,11 @@ jobs:
         id: setup-fortran
         with:
           compiler: intel
-          version: '2024.1'          
+          version: '2024.1'
+      - name: mpi
+        uses: mpi4py/setup-mpi@master
+        with:
+          mpi: intelmpi
       - name: test
         shell: bash
         run: |
