--- a/.github/workflows/lin-auto-icx-f-p.yml
+++ b/.github/workflows/lin-auto-icx-f-p.yml
@@ -28,7 +28,7 @@ jobs:
           curl -O -L https://github.com/HDFGroup/hdf5/releases/download/hdf5_1.14.4.2/hdf5-1.14.4-2.tar.gz
           tar zxf hdf5-1.14.4-2.tar.gz
           cd hdf5-1.14.4-2
-          ./configure --prefix=/tmp CXX="$(which mpiicpc) -cc=$(which icpx)" CC="$(which mpiicc) -cc=$(which icx)" FC="$(which mpiifort) -fc=$(which ifx)" LDFLAGS="-L/opt/intel/oneapi/mpi/latest/lib"
+          ./configure --prefix=/tmp CXX="$(which mpiicpc) -cc=$(which icpx)" CC="$(which mpiicc) -cc=$(which icx)" FC="$(which mpiifort) -fc=$(which ifx)" LDFLAGS="-L/opt/intel/oneapi/mpi/latest/lib" --enable-fortran
           make -j
           make check -j
           make install
