--- a/.github/workflows/lin-auto-icx-f-10.7.yml
+++ b/.github/workflows/lin-auto-icx-f-10.7.yml
@@ -1,9 +1,9 @@
-name: lin auto icx ifx p
+name: lin auto icx ifx p 10.7
 
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -25,9 +25,9 @@ jobs:
       - name: test
         shell: bash
         run: |
-          curl -O -L https://github.com/HDFGroup/hdf5/releases/download/hdf5_1.14.4.2/hdf5-1.14.4-2.tar.gz
-          tar zxf hdf5-1.14.4-2.tar.gz
-          cd hdf5-1.14.4-2
+          curl -O -L https://www.hdfgroup.org/package/hdf5-1-10-7-tar-gz/
+          tar zxf hdf5-1.10.7.tar.gz
+          cd hdf5-1.10.7
           ./configure --prefix=/tmp CXX="$(which mpiicpc) -cc=$(which icpx)" CC="$(which mpiicc) -cc=$(which icx)" FC="$(which mpiifort) -fc=$(which ifx)" LDFLAGS="-L/opt/intel/oneapi/mpi/latest/lib" --enable-fortran --enable-parallel
           make -j
           make check -j
