--- a/.github/workflows/lin-auto-icx-f-10.7.yml
+++ b/.github/workflows/lin-auto-icx-f-10.7.yml
@@ -30,7 +30,7 @@ jobs:
           tar zxf hdf5-1_10_7.tar.gz
           ls
           cd hdf5-hdf5-1_10_7
-          ./atutogen.sh
+          autoreconf -fvi
           ./configure --prefix=/tmp CXX="$(which mpiicpc) -cc=$(which icpx)" CC="$(which mpiicc) -cc=$(which icx)" FC="$(which mpiifort) -fc=$(which ifx)" LDFLAGS="-L/opt/intel/oneapi/mpi/latest/lib" --enable-fortran --enable-parallel
           make -j
           make check -j
