--- a/.github/workflows/win-signtool.yml
+++ b/.github/workflows/win-signtool.yml
@@ -13,3 +13,19 @@ jobs:
           dir "C:\Program Files (x86)\Windows Kits\10\bin\"
           dir "C:\Program Files (x86)\Windows Kits\10\bin\*\x64\signtool.exe"
         shell: pwsh
+      - name: Generate test certificate
+        id: generate-cert
+        shell: pwsh
+        run: |
+          $cert = New-SelfSignedCertificate -Type CodeSigningCert -KeyUsageProperty Sign -KeyUsage DigitalSignature `
+            -KeyExportPolicy ExportableEncrypted -KeyProtection None -KeyAlgorithm RSA -KeyLength 2048 `
+            -KeyDescription "Certificate to test code signing action" -FriendlyName "TestCert" -Subject "E=do@not.use,CN=Test Certificate" `
+            -CertStoreLocation "Cert:\CurrentUser\My\"
+          $password = 'ThisIsASuperLongPassword'
+          $securedPwd = ConvertTo-SecureString -String $password -Force -AsPlainText
+          $pfxFile = 'testCert.pfx'
+          Export-PfxCertificate -FilePath $pfxFile -Password $securedPwd -Cert "Cert:\CurrentUser\My\$($cert.Thumbprint)" -Force
+          $base64PfxCert = [convert]::ToBase64String((Get-Content -path $pfxFile -AsByteStream))
+          echo "certificate=${base64PfxCert}" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
+          echo "certSha1=$($cert.Thumbprint)" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
+          echo "certPassword=${password}" | Out-File -FilePath $env:GITHUB_OUTPUT -Encoding utf8 -Append
