ci: test ndk 26d

--- a/.github/workflows/mac-notarization.yml
+++ b/.github/workflows/mac-notarization.yml
@@ -3,7 +3,7 @@ name: mac notarization
 on:
   workflow_dispatch:
   push:
-    branches: [ main ]
+    branches: [ main- ]
 jobs:
   build:
     name: mac notarization
