ci(ndk): set env

--- a/.github/workflows/ndk.yml
+++ b/.github/workflows/ndk.yml
@@ -13,5 +13,7 @@ jobs:
         with:
           ndk-version: r26d
       - run: |
-          echo ${{ steps.setup-ndk.outputs.ndk-path }}
+          echo $ANDROID_NDK_HOME
           ndk-build NDK_PROJECT_PATH=. APP_BUILD_SCRIPT=./Android.mk NDK_APPLICATION_MK=./Application.mk
+	env:
+  	  ANDROID_NDK_HOME: ${{ steps.setup-ndk.outputs.ndk-path }}
