--- a/.github/workflows/mac13.yml
+++ b/.github/workflows/mac13.yml
@@ -2,7 +2,7 @@ name: mac-13
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   build:
@@ -14,7 +14,9 @@ jobs:
           curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot-1.14.tar.gz
           tar zxf snapshot-1.14.tar.gz
           cd hdf5-snapshot-1.14
-          mkdir build
-          cd build
-          cmake -DSITE:STRING="mac-13" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
-          ctest -D Experimental -C Release
+          cmake --workflow --preset=ci-StdShar-MACOS-Clang --fresh	  
+          # mkdir build
+          # cd build
+          # cmake -DSITE:STRING="mac-13" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
+          # ctest -D Experimental -C Release
+
