--- a/.github/workflows/mac13-snapshot.yml
+++ b/.github/workflows/mac13-snapshot.yml
@@ -25,10 +25,9 @@ jobs:
     
       - name: test
         run: |
-          curl -O -L https://github.com/HDFGroup/hdf5/archive/refs/tags/snapshot.tar.gz
-          tar zxf snapshot.tar.gz
-          cd hdf5-snapshot
-          cmake --workflow --preset=ci-StdShar-OSX-Clang --fresh	  
+          git clone https://github.com/HDFGroup/hdf5
+          cd hdf5
+          cmake --workflow --preset=ci-StdShar-MACOS-Clang --fresh	  
           # mkdir build
           # cd build
           # cmake -DSITE:STRING="mac-13" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
