--- a/.github/workflows/mac13-snapshot.yml
+++ b/.github/workflows/mac13-snapshot.yml
@@ -39,6 +39,11 @@ jobs:
           # cd build
           # cmake -DSITE:STRING="mac-13" -DBUILDNAME:STRING="4/r" -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" -DCTEST_DROP_LOCATION_INIT:STRING="/submit.php?project=HDF5" ..
           # ctest -D Experimental -C Release
+      - name: Save published dmg binary (MacOS_latest)
+        uses: actions/upload-artifact@v4
+        with:
+              name: macos13_clang-dmg-binary
+              path: /Users/runner/work/actions/actions/build/ci-StdShar-Clang/HDF5-1.15.0-Darwin.dmg          
       - name: Notarize .dmg
         uses: cocoalibs/xcode-notarization-action@v1
         with:
@@ -46,9 +51,4 @@ jobs:
           apple-id: ${{ secrets.MACOS_NOTARIZATION_APPLE_ID }}
           password: ${{ secrets.MACOS_NOTARIZATION_PW }}
           team-id: ${{ secrets.MACOS_NOTARIZATION_TEAM_ID }}
-          xcode-path: ${{ matrix.xcode-path }}          
-      - name: Save published dmg binary (MacOS_latest)
-        uses: actions/upload-artifact@v4
-        with:
-              name: macos13_clang-dmg-binary
-              path: /Users/runner/work/actions/actions/build/ci-StdShar-Clang/HDF5-1.15.0-Darwin.dmg
+          xcode-path: '/Applications/Xcode_13.2.1.app'
