--- a/.github/workflows/win-icx-f-p.yml
+++ b/.github/workflows/win-icx-f-p.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Install CMake
         uses: lukka/get-cmake@latest
       - name: Install Intel OneAPI
-        uses: awvwgk/setup-fortran@main
+        uses: fortran-lang/setup-fortran@main
         with:
           compiler: intel
           version: '2024.2'
