ci(win): set x64

--- a/.github/workflows/win-icx-f-p.yml
+++ b/.github/workflows/win-icx-f-p.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Configure & Build
         shell: cmd
         env:
-          vc_arch: ${{ matrix.msvc_arch }}
+          vc_arch: x64
         run: |
           set LIB=C:\Program Files (x86)\Intel\oneAPI\mpi\2021.13\lib;%LIB%
           set LIBPATH="C:\Program Files (x86)\Intel\oneAPI\mpi\latest\lib";%LIBPATH%
