--- a/.github/workflows/win-icx-p.yml
+++ b/.github/workflows/win-icx-p.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Configure & Build
         shell: cmd
         run: |
-          set LIB=C:\Program Files (x86)\Intel\oneAPI\mpi\2021.13\lib;%LIB%
+          set LIB=C:\Program Files (x86)\Intel\oneAPI\mpi\2021.13\lib;C:\Program Files (x86)\Intel\oneAPI\compiler\2024.2\lib;%LIB%
           set LIBPATH=C:\Program Files (x86)\Intel\oneAPI\mpi\latest\lib;%LIBPATH%
           set
           cd hdf5
